2010-10-31  Konstantinos Poulios  <logari81@googlemail.com>

	* plot/__go_draw_axes__.m: Removing deprecated code handling the case
        of both plotboxaspectratiomode and dataaspectratiomode set to manual
        for the gnuplot backend. Now this case is handled already in
        src/graphics.cc where xlim, ylim, zlim are recalculated if necessary.

2010-10-30  Gunnar Farnebäck <gunnar@lysator.liu.se>

	* strings/dec2base.m: Update algorithm to handle numbers up to 2^64-1.

2010-10-28  Rik  <octave@nomad.inbox5.com>

	* deprecated/module.mk, signal/module.mk, deprecated/autocov.m,
	  deprecated/autocor.m: Deprecate autocov and autocor functions.

2010-10-27  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Don't attempt to plot patch outlines if
	the marker property is set to none.

2010-10-28  Ben Abbott <bpabbott@mac.com>

	* plot/daspect.m, plot/pbaspect.m: Add demos setting both data and
	plotbox aspect ratios.

2010-10-27  David Bateman  <dbateman@free.fr>

	* plot/private/__patch__.m (setdata, setvertexdata): If argments are
	repeated, take the last argument only into account. Set cdata and
	facevertexcdata properties always.

2010-10-26  Kai Habel  <kai.habel@gmx.de>

	* plot/uimenu.m: Add simple demo

2010-10-25  David Bateman  <dbateman@free.fr>

	* statistics/distributions/discrete_pdf.m: Sort values before calling
	the lookup function.

2010-10-25  Kai Habel  <kai.habel@gmx.de>

	* plot/uimenu.m: New function
	* plot/__go_draw_figure__.m: Ignore uimenu objects for gnuplot
	backend
	* plot/module.mk (plot_FCN_FILES): Add it to the list.

2010-10-24  Rik  <octave@nomad.inbox5.com>

	* miscellaneous/compare_versions.m, plot/ylabel.m, plot/ylim.m,
	plot/zlabel.m, plot/zlim.m: Docstring improvements.

2010-10-24  Rik  <octave@nomad.inbox5.com>

	* specfun/module.mk, deprecated/module.mk, deprecated/betai.m,
	deprecated/gammai.m, deprecated/is_global.m: Deprecate betai,
	gammai, and is_global functions.
